# crosscheck

./: Example.hs  LICENSE  crosscheck.cabal  reverse.js
Test/: CrossCheck.hs
src/Test/: CrossCheck.hs
