name:                crosscheck
version:             0.1.0.0
synopsis:            Use QuickCheck to test functions in other languages.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Test.QuickCheck.Monadic.CrossCheck
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:      
  default-language:    Haskell2010

test-suite crosscheck-examples
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <4.8
                     , QuickCheck

                     , time
  main-is:             Example.hs