name:                crosscheck
version:             0.1.0.0
synopsis:            Use QuickCheck to test functions in other languages.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Test.CrossCheck
  -- other-modules:       
  -- other-extensions:    
  build-depends:       QuickCheck
                     , base >=4.7 && <4.8
                     , mtl
                     , split
                     , transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010